[package]
name = "marust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
deadpool-redis = { version = "0.22" }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"