[workspace]
resolver = "3"
members = [
    "services/auth",
    "services/user",
    "services/question",
    "services/notice",
    "services/form",
    "libs/common",
    "libs/infrastructure",
]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
deadpool-redis = { version = "0.22" }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
