[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
async-trait = { workspace = true }
common = { path = "../../libs/common" }
infrastructure = { path = "../../libs/infrastructure" }
