[package]
name = "notice-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
common = { path = "../../libs/common" }
infrastructure = { path = "../../libs/infrastructure" }
tower-http = { workspace = true }
serde_json = { workspace = true }
